# open-second-brain

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  __init__.py  after-install.md  cli.py  install.md  openclaw.plugin.json  oxlint.json  package.json  plugin.yaml  pyproject.toml  tsconfig.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli-reference.md  cross-project-pointer.md  hermes-cron.md  how-it-works.md  idea.md  mcp.md  metrics.md  observability.md  pay-memory.md  roadmap.md  stability.md  updating.md
docs/plans/: 2026-05-06-cli-foundation.md  2026-05-10-pay-memory.md  2026-05-15-brain-observing-memory.md  2026-05-15-brain-roadmap.md  2026-05-16-brain-capture-and-fields-design.md  2026-05-16-brain-capture-and-fields-impl.md  2026-05-16-brain-search-design.md  2026-05-16-brain-search-impl.md  2026-05-17-brain-onboarding-quality-design.md  2026-05-17-brain-onboarding-quality-impl.md  2026-05-17-tier-a-snapshot-confidence-pointer-design.md  2026-05-17-tier-a-snapshot-confidence-pointer-impl.md  2026-05-18-agent-discipline-tail-design.md  2026-05-18-agent-discipline-tail-impl.md  2026-05-18-brain-maturity-design.md  2026-05-18-brain-maturity-impl.md  2026-05-18-v0.10.6-design.md  2026-05-18-v0.10.6-impl.md  2026-05-19-v0.10.8-design.md  (+10 more)
examples/: hermes-payment-digest.sh
hooks/: README.md  active-inject.ts  gap-agenda.ts  gap-promote.ts  hooks.json  nav-inject.ts  post-write-reminder.ts  pretool-orient.ts  recall-inject.ts  session-capture.ts  stop-log-guardrail.ts
install/: claudecode.md  codex.md  grok.md  hermes.md  openclaw.md  opencode.md  prerequisites.md
openclaw/: event-log.js  index.js  o2b-runner.js  vault.js
scripts/: _macos-sqlite.sh  asb  discipline-report.ts  measure-token-surface.ts  o2b  o2b-hook  sync-version.py  sync-version.ts  vault-log
templates/: brain-explorer.html  identity-reminder.hermes.txt  identity-reminder.openclaw.txt  identity-reminder.txt
tests/: fixtures.py  setup.ts  test_claude_marketplace.py  test_cli.py  test_codex_marketplace.py  test_config.py  test_doctor.py  test_event_log.py  test_hermes_plugin.py  test_init.py  test_mcp.py  test_openclaw_plugin.py  test_uninstall.py  test_vault.py  test_version.py  version.test.ts
(+2057 files in other folders)
