[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "open-second-brain"
version = "0.3.1"
description = "Hermes-first second brain package for Obsidian-compatible Markdown vaults."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Open Second Brain contributors" }]
keywords = ["second-brain", "obsidian", "agents", "skills", "event-log"]
dependencies = []

[project.scripts]
o2b = "open_second_brain.cli:main"
vault-log = "open_second_brain.vault_log:main"

[tool.setuptools.packages.find]
where = ["src"]
